--- a/src/client/Less/app.less
+++ b/src/client/Less/app.less
@@ -47,6 +47,12 @@ span {
   //border: 1px solid red;
 }
 
+.attribute p {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0px;
+}
+
 .valueItem, .combinationHeader {
   color: black;
   border: 2px solid black;
@@ -113,4 +119,26 @@ textarea {
 
 #root {
   margin: 20px;
+}
+
+.circle-btn {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+
+.circle-btn-text {
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
 }
