--- a/src/client/Less/app.less
+++ b/src/client/Less/app.less
@@ -53,6 +53,10 @@ span {
   margin: 0px;
 }
 
+.values-container, .attribute-container {
+  display: flex;
+}
+
 .valueItem, .combinationHeader {
   color: black;
   border: 2px solid black;
@@ -63,7 +67,7 @@ span {
   //border-color: black;
   //border-width: 2px;
   margin: 5px;
-  font-weight: 500;
+  font-weight: 500; 
   min-width: 4rem;
   text-align: center;
   display: inline-block;
@@ -125,20 +129,22 @@ textarea {
   width: 20px;
   height: 20px;
   border-radius: 50%;
+  color: white;
   background-color: red;
   border: none;
   cursor: pointer;
-  position: relative;
-  display: flex;
+  text-align: center;
+  display: inline-block;  
   justify-content: center;
   align-items: center;
-  display: inline-block;
   vertical-align: middle;
 }
 
 
 .circle-btn-text {
+  width: 100%;
   color: white;
   font-size: 12px;
+  text-align: center;
   font-weight: bold;
 }
